--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -231,7 +231,7 @@ disable_ligatures never
 
 #: Cursor customization {{{
 
-cursor #FFFFFF
+# cursor #FFFFFF
 
 #: Default cursor color. If set to the special value none the cursor
 #: will be rendered with a "reverse video" effect. It's color will be
