--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,22 +3,49 @@
   "languageserver": {
     "bash": {
       "command": "bash-language-server",
-      "args": ["start"],
-      "filetypes": ["sh"]
+      "args": [
+        "start"
+      ],
+      "filetypes": [
+        "sh"
+      ]
     },
     "clangd": {
       "command": "clangd",
-      "rootPatterns": ["compile_flags.txt", "compile_commands.json"],
-      "filetypes": ["c", "cc", "cpp", "c++"]
+      "rootPatterns": [
+        "compile_flags.txt",
+        "compile_commands.json"
+      ],
+      "filetypes": [
+        "c",
+        "cc",
+        "cpp",
+        "c++"
+      ]
     },
     "golang": {
       "command": "gopls",
-      "rootPatterns": ["go.mod"],
-      "filetypes": ["go"]
+      "rootPatterns": [
+        "go.mod"
+      ],
+      "filetypes": [
+        "go"
+      ]
     },
     "lua": {
       "command": "~/.local/share/nvim/mason/bin/lua-language-server",
-      "filetypes": ["lua"]
+      "filetypes": [
+        "lua"
+      ]
+    },
+    "rust": {
+      "command": "~/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/bin/rust-analyzer",
+      "filetypes": ["rust"],
+      "rootPatterns": ["Cargo.toml"]
+    },
+    "zig": {
+      "command": "zls",
+      "filetypes": ["zig"]
     }
   }
 }
