--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ include theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code
+font_family      JetBrainsMono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
