--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "codeLens.enable": true,
+  "coc.preferences.formatOnSave": true,
   "languageserver": {
     "bash": {
       "command": "bash-language-server",
