--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -5,7 +5,7 @@
   "spacing": 4,
   "modules-left": ["custom/desktop_name", "wlr/workspaces"],
   "modules-center": ["hyprland/window"],
-  "modules-right": ["pulseaudio", "cpu", "memory", "clock"],
+  "modules-right": ["tray", "pulseaudio", "cpu", "memory", "clock"],
   "custom/desktop_name": {
     "format": "{}",
     "return-type": "json",
@@ -64,6 +64,9 @@
     "interval": 1,
     "format": "{ipaddr} ▲ {bandwidthUpBits} ▼ {bandwidthDownBytes}",
     "max-length": 50
+  },
+  "tray": {
+      "spacing": 10
   },
   "pulseaudio": {
     "format": "{volume}% {icon}",
