--- a/.config/hypr/configs/bind.conf
+++ b/.config/hypr/configs/bind.conf
@@ -4,7 +4,7 @@ bind = CTRL, Print, exec, grim -g "$(slurp)" - | wl-copy && notify-send "Screens
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, alacritty
+bind = $mainMod, Q, exec, foot
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, nautilus
