--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,4 +1,3 @@
-preload = ~/Pictures/Wallpapers/wallpaper_13.png
-
-wallpaper = , ~/Pictures/Wallpapers/wallpaper_13.png
+preload = ~/Pictures/Wallpapers/wallpaper_1.jpg
+wallpaper = , ~/Pictures/Wallpapers/wallpaper_1.jpg
 
