--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -73,6 +73,7 @@ blink=yes
 alpha=0.5
 # background=002b36
 # foreground=839496
+background=000000
 
 ## Normal/regular colors (color palette 0-7)
 # regular0=073642  # black
