--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Pictures/Wallpapers/wallpaper_1.jpg
-wallpaper = , ~/Pictures/Wallpapers/wallpaper_1.jpg
+preload = ~/Pictures/Wallpapers/wallpaper_11.png
+wallpaper = , ~/Pictures/Wallpapers/wallpaper_11.png
 
